<resources>
    <string name="app_name">final</string>
    <string name="str_button1">設定</string>

    <string name="str_button2">刪除</string>

    <string name="str_title1">只響一次</string>

    <string name="str_title2">重複響</string>

    <string name="str_default">目前沒有鬧鐘</string>

    <string name="str_text1">開始時間</string>

    <string name="str_text2">重覆響起的鬧鐘</string>

    <string name="str_text3">秒</string>
</resources>
